# Streamlit

./: app.py  app2.py  app3.py  app4.py  app5.py  bmi.py  chatbot_app.py  main.py  main2.py  ml.py  nubija.py  nubija2.py  profile.py  profile_quote.py  pyproject.toml  requirements.txt  yolo.py  yolo2.py
.streamlit/: command.txt
data/: 경상남도 창원시_누비자 터미널_20251231.xlsx
